--- a/templates/register.html
+++ b/templates/register.html
@@ -2,6 +2,7 @@
 {% block body %}
   <form action="" method=post class="form-horizontal">
     <h2>Catalog online</h2>
+    
     <div class="control-group">
         <div class="controls">
           <input type="email" id="email" name="email" class="input-xlarge"
@@ -9,23 +10,25 @@
             required>
         </div>
     </div>
-
+    
     <div class="control-group">
         <div class="controls">
           <input type="password" id="password" name="password" class="input-xlarge"
-            placeholder="Enter Password" required>
-        </div>
-    </div>
-
-     <div class="control-group">
-        <div class="controls">
-          <input type="checkbox" id="remember_me" name="remember_me">
+            placeholder="Enter Password" value="{{ request.form.password }}"
+            required>
         </div>
     </div>
 
     <div class="control-group">
         <div class="controls">
-          <button type="submit" class="btn btn-success">Signin</button>
+          <input type="user_type" id="user_type" name="user_type" class="input-xlarge"
+            placeholder="Enter user type" value="{{ request.form.username }}"
+            required>
+        </div>
+    </div>
+    <div class="control-group">
+        <div class="controls">
+          <button type="submit" class="btn btn-success">Signup</button>
         </div>
     </div>
   </form>
