Readme,CSS,Footer

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,8 +56,8 @@ body {
 	{% block body %}{% endblock %}
 	<hr>
 	<footer id="footer">
-				<p>OKatalogue&copy; Pavel Nicolae Teodor 2014</p>
+				<p>SG &copy; Pavel Nicolae Teodor &copy; Mertoiu Alina </p>
 
-				Contact him at <a href="mailto:shekhargulati84@gmail.com">teo721@yahoo.com</a>.</p>	
+				Contact him at <a href="mailto:teo721@yahoo.com">teo721@yahoo.com</a>.</p>	
 	</footer>
 </div>
