--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<h1> M-am logat </h1>
+<h2>Bun venit Saint George City of Debate!</h3>
+<iframe title="YouTube video player" class="youtube-player" type="text/html" 
+width="640" height="390" src="http://www.youtube.com/embed/jfRNTsGjM7g"
+frameborder="0" allowFullScreen></iframe>
 
 {% endblock %}
