--- a/templates/admin.html
+++ b/templates/admin.html
@@ -9,19 +9,26 @@
     	<tr>
     		<th>#
     		<th>Tabmaster Name
+            <th>
+            <th>
     	{%- for tabmaster in tabmasters %}
     	<tr class={{ "success" }}>
     		<td style={{ "text-decoration:none"}}>{{ tabmaster.id }}
     		<td style={{ "text-decoration:none"}}>{{ tabmaster.name }}
+            <td>
+                <p>
+                    <a href="{{ url_for('del_tabmaster_direct', id=tabmaster.id) }}" class="btn btn-large btn-primary">Delete Tab Master</a>
+                </p>
     	{% endfor %}
-    </table>
-    <p>
-      <a href="{{ url_for('new_tabmaster') }}" class="btn btn-large btn-primary">New</a>
-    </p>
+    </table>  
+        <p>
+            <a href="{{ url_for('del_tabmaster') }}" class="btn btn-large btn-primary">Delete Tab Master</a>
+        </p> 
+        <p>
+            <a href="{{ url_for('new_tabmaster') }}" class="btn btn-large btn-primary">New</a>
+        </p>
 
-     <p>
-      <a href="{{ url_for('del_tabmaster') }}" class="btn btn-large btn-primary">Delete</a>
-    </p>
+
 
 
 
