--- a/templates/view_tabmaster.html
+++ b/templates/view_tabmaster.html
@@ -5,7 +5,7 @@
     <div class="control-group">
         <div class="controls">
           <input type="text" id="name" name="name" class="input-xlarge"
-            placeholder="Name" value="{{ tabmaster_item.name }}"
+            placeholder="Name" value=""
             required>
         </div>
     </div>
