--- a/templates/create_tabmaster.html
+++ b/templates/create_tabmaster.html
@@ -20,7 +20,7 @@
 
     <div class="control-group">
         <div class="controls">
-          <button type="submit" class="btn btn-success">Create tambaster</button>
+          <button type="submit" class="btn btn-success">Create Tab Master</button>
           <a href="{{ url_for('home') }}">Back</a>
         </div>
     </div>
